crates/tmark-writers/tests/snapshots/fixtures__frontmatter@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<p><strong>Not a lead.</strong> With the feature off.</p>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
