crates/tmark-writers/tests/snapshots/fixtures__frontmatter@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
\textbf{Not a lead.} With the feature off.

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
