crates/tmark-writers/tests/snapshots/fixtures__glossary-flat@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
An \tsgls{api} built on \tsgls{solid}, but not [?gls:nope].

---requires---
{
  "packages": [
    "glossaries"
  ],
  "fragments": [
    "ts-glossary"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
