crates/tmark-writers/tests/snapshots/fixtures__glossary-flat@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
An #ts-gls("api") built on #ts-gls("solid"), but not \[?gls:nope\].

---requires---
{
  "packages": [
    "glossaries"
  ],
  "fragments": [
    "ts-glossary"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
