crates/tmark-writers/tests/snapshots/fixtures__glossary-structured@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<p>An <a href="#gls-api" class="glossary" title="An application programming interface.">api</a> of the core group, but <span class="unresolved">[?gls:groups]</span> is no term.</p>

---requires---
{
  "packages": [
    "glossaries"
  ],
  "fragments": [
    "ts-glossary"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
