crates/tmark-writers/tests/snapshots/fixtures__glossary-structured@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
An #ts-gls("api") of the core group, but \[?gls:groups\] is no term.

---requires---
{
  "packages": [
    "glossaries"
  ],
  "fragments": [
    "ts-glossary"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
