crates/tmark-writers/tests/snapshots/fixtures__heading-implicit-id-unicode@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<h2>Café au lait</h2>
<h2>Thé à la menthe</h2>
<h2>日本語 見出し</h2>
<p>See <a href="#café-au-lait" class="reference">Section 1</a>, <a href="#thé-à-la-menthe" class="reference">Section 2</a> and <a href="#日本語-見出し" class="reference"></a>.</p>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
