crates/tmark-writers/tests/snapshots/fixtures__heading-implicit-id-unicode@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
\subsection{Café au lait}\label{café-au-lait}

\subsection{Thé à la menthe}\label{thé-à-la-menthe}

\subsection{日本語 見出し}\label{日本語-見出し}

See Section~\ref{café-au-lait}, Section~\ref{thé-à-la-menthe} and \ref{日本語-見出し}.

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
